--- a/.githubworkflows/github-actions.yml
+++ b/.githubworkflows/github-actions.yml
@@ -1,12 +1,47 @@
-name: github-actions
+name: Java CI
+
 on: [push]
+
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: windows-latest
+
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Set up JDK 13
+        uses: actions/setup-java@v2
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          java-version: '13'
+          distribution: 'adopt'
+      - name: get ivy
+        run: choco install ivy
+      - name: install Ant
+        run: ant -lib C:/Users/salma/.ant/lib dist
+      - name: Build with Ant
+        run: ant -noinput -buildfile build.xml dist
+  test:
+    needs: build
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 13
+        uses: actions/setup-java@v2
+        with:
+          java-version: '13'
+          distribution: 'adopt'
+      - name: get ivy
+        run: choco install ivy
+      - name: install Ant
+        run: ant -lib C:/Users/salma/.ant/lib test
+      - name: Build with Ant
+        run: ant -noinput -buildfile build.xml test     
+#   test:
+#     needs: build
+#     runs-on: windows-latest
+    
+#     steps:
+#       - name: install Ant
+#         run: ant -lib C:/Users/salma/.ant/lib test
+#       - name: Build with Ant
+#         run: ant -noinput -buildfile build.xml test
