--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,48 @@
-# This is a basic workflow to help you get started with Actions
+name: Java CI
 
-name: CI
+on: [push]
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Set up JDK 13
+        uses: actions/setup-java@v2
+        with:
+          java-version: '13'
+          distribution: 'adopt'
+      - name: get ivy
+        run: choco install ivy
+      - name: install Ant
+        run: ant -lib C:/Users/salma/.ant/lib dist
+      - name: Build with Ant
+        run: ant -noinput -buildfile build.xml dist
+  test:
+    needs: build
+    runs-on: windows-latest
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 13
+        uses: actions/setup-java@v2
+        with:
+          java-version: '13'
+          distribution: 'adopt'
+      - name: get ivy
+        run: choco install ivy
+      - name: install Ant
+        run: ant -lib C:/Users/salma/.ant/lib test
+      - name: Build with Ant
+        run: ant -noinput -buildfile build.xml test     
+#   test:
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+#     needs: build
+#     runs-on: windows-latest
+    
+#     steps:
+#       - name: install Ant
+#         run: ant -lib C:/Users/salma/.ant/lib test
+#       - name: Build with Ant
+#         run: ant -noinput -buildfile build.xml test
